Agrego Ordenes de Pago a /Public

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="nuevo.html">Nuevo</a>
-            <a class="nav-item nav-link" href="estado.html">Estado</a>
             <a class="nav-item nav-link" href="pedidos.html">Pedidos</a>
+            <a class="nav-item nav-link" href="ordenes.html">Pagos</a>
           </div>
         </div>
     </nav>
