--- a/public/pedidos.html
+++ b/public/pedidos.html
@@ -16,14 +16,47 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="nuevo.html">Nuevo</a>
-            <a class="nav-item nav-link" href="estado.html">Estado</a>
             <a class="nav-item nav-link" href="pedidos.html">Pedidos</a>
+            <a class="nav-item nav-link" href="ordenes.html">Pagos</a>
           </div>
         </div>
     </nav>
     <table>
         <tr>
+            <td>
+                <form method="post" action="http://localhost:3000/pedido">
+                    <h1>Nuevo Pedido</h1>
+                    <hr>
+                    <div class="form-group col-3">
+                        <label>Total</label>
+                        <input type="text" class="form-control" id="total" name="total" required>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Currency</label>
+                        <input type="text" class="form-control" id="currency" name="currency" required>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Reference</label>
+                        <input type="text" class="form-control" id="reference" name="reference" required>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Description</label>
+                        <input type="text" class="form-control" id="description" name="description" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" formtarget="_blank">Generar</button>
+                </form>
+            </td>
+            <td>
+                <form method="post" action="" id="form-act">
+                    <h1>Estado</h1>
+                    <hr>
+                    <div class="form-group col-3">
+                        <label>Reference</label>
+                        <input type="text" class="form-control" id="reference" name="reference" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" onclick="ponerAction()" formtarget="_blank">Ver Estado</button>
+                </form>
+            </td>
             <td>
                 <form method="get" action="http://localhost:3000/pedidos">
                     <button type="submit" class="btn btn-primary" formtarget="_blank">Ver Pedidos</button>
@@ -32,4 +65,12 @@
         </tr>
     </table>
 </body>
+<script>
+    function ponerAction() {
+        var ref = document.getElementById('reference').value; 
+        var url = "http://localhost:3000/webhook/"+ref;
+        var act = document.getElementById('form-act');
+        act.setAttribute("action", url);
+    }
+</script>
 </html>
